add swagger for movies get by filter
